@@ -135,6 +135,7 @@ define function, begin
 124,changeNPCID,2,0,0       # given an NPC reference, changes its ID
 125,createNPC,4,0,0,0,2     # create an NPC by ID at a location and return its reference
 126,destroyNPC,1,0          # destroy the referenced NPC
+126,deleteNPC,1,0           # alias
 127,teachspell,3,0,0,0      # (who,spell,learntype) tries to teach a hero a spell
 128,forgetspell,2,0,0       # (who,spell) forget a learned spell
 129,readspell,3,0,0,0       # (who,list,slot) returns the number of the spell in a slot
